deployment/base/matrix/synapse/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse
  namespace: matrix
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/name: synapse
    app.kubernetes.io/part-of: matrix
    app.kubernetes.io/component: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: synapse
  template:
    metadata:
      labels:
        app.kubernetes.io/name: synapse
        app.kubernetes.io/part-of: matrix
        app.kubernetes.io/component: server
    spec:
      containers:
        - name: synapse
          image: ghcr.io/element-hq/synapse:latest
          ports:
            - name: federation
              containerPort: 8448
            - name: http
              containerPort: 8008
            - name: metrics
              containerPort: 9000
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /health
              port: http
          startupProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
            failureThreshold: 30
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: synapse
        - name: synapse-config-template
          configMap:
            name: synapse-config-template
        - name: whatsapp-registration-template
          configMap:
            name: mautrix-whatsapp-registration-template
        - name: meta-registration-template
          configMap:
            name: mautrix-meta-registration-template
        - name: gmessages-registration-template
          configMap:
            name: mautrix-gmessages-registration-template
        - name: discord-registration-template
          configMap:
            name: mautrix-discord-registration-template
        - name: doublepuppet-registration-template
          configMap:
            name: doublepuppet-registration-template
