deployment/base/matrix/synapse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse
  namespace: matrix
spec:
  selector:
    app.kubernetes.io/name: synapse
  ports:
    - name: http
      port: 8008
      targetPort: http
    - name: federation
      port: 8448
      targetPort: federation
