deployment/base/matrix/synapse/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: synapse
  namespace: matrix
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`matrix.hauptspeicher.com`) && PathPrefix(`/_synapse/admin`)
      kind: Rule
      priority: 100
      middlewares:
        - name: synapse-admin-deny
      services:
        - name: synapse
          port: 8008

    - match: Host(`matrix.hauptspeicher.com`)
      priority: 1
      kind: Rule
      services:
        - name: synapse
          port: 8008
  tls:
    certResolver: myresolver
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: synapse-admin-deny
  namespace: matrix
spec:
  ipAllowList:
    sourceRange:
      - 127.0.0.1/32
